fixed z-index for nav bar when text overlaps with nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,9 @@ i.fa-bars {
 	
 	width: 50px;
 	
-	background: rgba(0,0,0,0.9)
+	background: rgba(0,0,0,0.9);
+	
+	z-index: 10;
 }
 
 .menu {
